sub menu added to nav items

--- a/index.html
+++ b/index.html
@@ -36,21 +36,110 @@
 
       <div class="collapse navbar-collapse text-small" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto center-responsive mr-2">
-          <li class="nav-item nav-botton">
-            <a class="nav-link text-white" href="#">لوازم التحریر</a>
-          </li>
-          <li class="nav-item nav-botton">
-            <a class="nav-link text-white" href="#">کتاب کمک درسی</a>
-          </li>
-          <li class="nav-item nav-botton">
-            <a class="nav-link text-white" href="#">کتاب دانشگاهی</a>
-          </li>
-          <li class="nav-item nav-botton">
-            <a class="nav-link text-white" href="#">لوح فشرده</a>
-          </li>
-          <li class="nav-item nav-botton">
-            <a class="nav-link text-white" href="#">بازی و ابزار آموزشی</a>
-          </li>
+          <li class="nav-item dropdown">
+                 <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  بازی و ابزار آموزشی
+                 </a>
+                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                   <a class="dropdown-item text-center text-white" href="#">نوشت افزار</a>
+                   <div class="dropdown-divider bg-sec"></div>
+                   <a class="dropdown-item text-right text-white" href="#">خودکار و روان نویس</a>
+                   <a class="dropdown-item text-right text-white" href="#">ماژیک</a>
+                   <a class="dropdown-item text-right text-white" href="#">تراش</a>
+                   <a class="dropdown-item text-right text-white" href="#">پاک کن و غلط گیر</a>
+                   <a class="dropdown-item text-right text-white" href="#">مداد نوکی و نوک</a>
+                 </div>
+               </li>
+               <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      لوح فشرده
+                      </a>
+                      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item text-center text-white" href="#">نوشت افزار</a>
+                        <div class="dropdown-divider bg-sec"></div>
+                        <a class="dropdown-item text-right text-white" href="#">خودکار و روان نویس</a>
+                        <a class="dropdown-item text-right text-white" href="#">ماژیک</a>
+                        <a class="dropdown-item text-right text-white" href="#">تراش</a>
+                        <a class="dropdown-item text-right text-white" href="#">پاک کن و غلط گیر</a>
+                        <a class="dropdown-item text-right text-white" href="#">مداد نوکی و نوک</a>
+                      </div>
+                    </li>
+                    <li class="nav-item dropdown">
+                           <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                             کتاب دانشگاهی
+                           </a>
+                           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                             <a class="dropdown-item text-center text-white" href="#">نوشت افزار</a>
+                             <div class="dropdown-divider bg-sec"></div>
+                             <a class="dropdown-item text-right text-white" href="#">خودکار و روان نویس</a>
+                             <a class="dropdown-item text-right text-white" href="#">ماژیک</a>
+                             <a class="dropdown-item text-right text-white" href="#">تراش</a>
+                             <a class="dropdown-item text-right text-white" href="#">پاک کن و غلط گیر</a>
+                             <a class="dropdown-item text-right text-white" href="#">مداد نوکی و نوک</a>
+                           </div>
+                         </li>
+                         <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                کتاب کمک درسی
+                                </a>
+                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                  <div class="wrap-it-all  flex-on-hover">
+                                    <div class="">
+                                      <a class="dropdown-item text-center text-white" href="#">دبستان</a>
+                                      <div class="dropdown-divider bg-sec"></div>
+                                      <a class="dropdown-item text-right text-white" href="#">اول دبستان</a>
+                                      <a class="dropdown-item text-right text-white" href="#">دوم دبستان</a>
+                                      <a class="dropdown-item text-right text-white" href="#">سوم دبستان</a>
+                                      <a class="dropdown-item text-right text-white" href="#">چهارم دبستان</a>
+                                      <a class="dropdown-item text-right text-white" href="#">پنجم دبستان</a>
+                                      <a class="dropdown-item text-right text-white" href="#">ششم دبستان</a>
+                                      <div class="dropdown-divider bg-sec"></div>
+                                    </div>
+  <div class="">
+    <a class="dropdown-item text-center text-white" href="#">متوسطه اول</a>
+    <div class="dropdown-divider bg-sec"></div>
+    <a class="dropdown-item text-right text-white" href="#">هفتم</a>
+    <a class="dropdown-item text-right text-white" href="#">هشتم</a>
+    <a class="dropdown-item text-right text-white" href="#">نهم</a>
+    <div class="dropdown-divider bg-sec"></div>
+  </div>
+
+
+  <div class="">
+    <a class="dropdown-item text-center text-white" href="#">متوسطه دوم</a>
+    <div class="dropdown-divider bg-sec"></div>
+    <a class="dropdown-item text-right text-white" href="#">دهم تجربی</a>
+    <a class="dropdown-item text-right text-white" href="#">دهم ریاضی</a>
+    <a class="dropdown-item text-right text-white" href="#">دهم انسانی</a>
+    <a class="dropdown-item text-right text-white" href="#">یازدهم تجربی</a>
+    <a class="dropdown-item text-right text-white" href="#">یازدهم ریاضی</a>
+    <a class="dropdown-item text-right text-white" href="#">یازدهم انسانی</a>
+    <a class="dropdown-item text-right text-white" href="#">دوازدهم تجربی</a>
+    <a class="dropdown-item text-right text-white" href="#">دوازدهم تجربی</a>
+    <a class="dropdown-item text-right text-white" href="#">دوازدهم انسانی</a>
+  </div>
+                                  </div>
+
+
+
+
+
+                                </div>
+                              </li>
+                              <li class="nav-item dropdown">
+                                     <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                       لوازم التحریر
+                                     </a>
+                                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                       <a class="dropdown-item text-center text-white" href="#">نوشت افزار</a>
+                                       <div class="dropdown-divider bg-sec"></div>
+                                       <a class="dropdown-item text-right text-white" href="#">خودکار و روان نویس</a>
+                                       <a class="dropdown-item text-right text-white" href="#">ماژیک</a>
+                                       <a class="dropdown-item text-right text-white" href="#">تراش</a>
+                                       <a class="dropdown-item text-right text-white" href="#">پاک کن و غلط گیر</a>
+                                       <a class="dropdown-item text-right text-white" href="#">مداد نوکی و نوک</a>
+                                     </div>
+                                   </li>
         </ul>
         <div class="ltr hide-responsive">
           <div class="search-box">
