pop over cart finished

--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="shortcut icon" type="image/png" href="https://www.pubisha.com/assets/images/fav-icon-16.png" />
   <link href="./assets/fontawesome/css/all.css" rel="stylesheet">
   <link rel="stylesheet" href="./assets/OwlCarousel/assets/owl.carousel.min.css">
   <link rel="stylesheet" href="./assets/OwlCarousel/assets/owl.theme.default.min.css">
+
   <!--load all styles -->
   <link rel="stylesheet" href="./assets/css/style.css">
 
@@ -199,18 +201,33 @@
                 <span class="c-price__currency">تومان</span>
               </span>
               <p class="d-inline-block text-small pl-5">تعداد: 0</p>
-
             </span>
           </div>
           <div class="col-md-4 text-center">
             <img src="https://images-na.ssl-images-amazon.com/images/I/81VnTWWiJcL._SX342_.jpg" width="100%" class="rounded mx-auto d-block" alt="...">
             <a href="#"><i class="far fa-times-circle mt-2"></i></a>
           </div>
-
+        </div>
+        <hr>
+        <div class="row product-cart-pop">
+          <div class="col-md-8 hover-cart-text">
+            <p>کرم ضد آفتاب الارو سری Foundation Effect مدل Prote Prote Prote Prote</p>
+            <span class="c-price text-danger pt-1 text-center">
+              <span class="c-price__value js-price-value pt-1">
+                ۱۰۸,۹۰۰
+                <span class="c-price__currency">تومان</span>
+              </span>
+              <p class="d-inline-block text-small pl-5">تعداد: 0</p>
+            </span>
+          </div>
+          <div class="col-md-4 text-center">
+            <img src="https://images-na.ssl-images-amazon.com/images/I/81VnTWWiJcL._SX342_.jpg" width="100%" class="rounded mx-auto d-block" alt="...">
+            <a href="#"><i class="far fa-times-circle mt-2"></i></a>
+          </div>
         </div>
       </div>
       <div class="text-center p-2">
-        <button type="button" class="btn btn-outline-primary btn-block">ثبت سفارش و ارسال</button>
+        <button type="button" class="btn btn-outline-primary btn-sm btn-block">ثبت سفارش و ارسال</button>
 
       </div>
     </div>
@@ -1159,17 +1176,17 @@
 
   <footer>
 
-    <div class="container-fluid text-white text-medium bg-main">
+    <div class="container-fluid text-white text-medium bg-main footer-text">
       <div class="row pt-3">
         <div class="col-md-3 text-small">
-          <h5 class="text-right">راهنمای خرید از دیجی‌کالا</h5>
+          <h5 class="text-right footer-title">راهنمای خرید از دیجی‌کالا</h5>
           <hr>
           <p class="text-right">نحوه ثبت سفارش</p>
           <p class="text-right">رویه ارسال سفارش</p>
           <p class="text-right">شیوه‌های پرداخت</p>
         </div>
         <div class="col-md-3 text-small">
-          <h5 class="text-right">خدمات مشتریان</h5>
+          <h5 class="text-right footer-title">خدمات مشتریان</h5>
           <hr>
           <p class="text-right">پاسخ به پرسش‌های متداول</p>
           <p class="text-right">رویه‌های بازگرداندن کالا</p>
@@ -1178,7 +1195,7 @@
           <p class="text-right">گزارش باگ</p>
         </div>
         <div class="col-md-3 text-small">
-          <h5 class="text-right">با دیجی‌کالا</h5>
+          <h5 class="text-right footer-title">با دیجی‌کالا</h5>
           <hr>
           <p class="text-right">اتاق خبر دیجی‌کالا</p>
           <p class="text-right">فروش در دیجی‌کالا</p>
@@ -1208,8 +1225,8 @@
       </div>
       <div class="row bg-sec">
         <div class="col-md-6 pt-2 text-right">
-          <h5 class="h6">هفت روز هفته ، ۲۴ ساعت شبانه‌روز پاسخگوی شما هستیم</h5>
-          <h6 class="text-white">
+          <h5 class="below-footer">هفت روز هفته ، ۲۴ ساعت شبانه‌روز پاسخگوی شما هستیم</h5>
+          <h6 class="text-white below-footer">
             شماره تماس :
             ۶۱۹۳۰۰۰۰ - ۰۲۱ | ۹۵۱۱۹۰۹۵ - ۰۲۱
           </h6>
