--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
       </a>
       <div class="mr-auto pt-2">
         <a href="#" class="pr-2"><i class="fas fa-user text-white"></i></a>
-        <a href="#"><i class="fas fa-shopping-cart text-white text-large" onclick="cartFunc()"></i></a>
-        <span class="badge badge-pill badge-danger">2</span>
+        <a href="#"><i class="fas fa-shopping-cart text-white text-large hide-desktop-for-real"></i></a>
+        <span class="badge badge-pill badge-danger hide-desktop-for-real">2</span>
+        <a href="#"><i class="fas fa-shopping-cart text-white text-large hide-between" onclick="cartFunc()"></i></a>
+        <span class="badge badge-pill badge-danger hide-between">2</span>
 
 
 
@@ -194,7 +196,7 @@
 
         <div class="row product-cart-pop">
           <div class="col-md-8 hover-cart-text">
-            <p>کرم ضد آفتاب الارو سری Foundation Effect مدل Prote Prote Prote Prote</p>
+            <a href="#" class="text-dark"><p>کرم ضد آفتاب الارو سری Foundation Effect مدل Prote Prote Prote Prote</p></a>
             <span class="c-price text-danger pt-1 text-center">
               <span class="c-price__value js-price-value pt-1">
                 ۱۰۸,۹۰۰
@@ -204,14 +206,14 @@
             </span>
           </div>
           <div class="col-md-4 text-center">
-            <img src="https://images-na.ssl-images-amazon.com/images/I/81VnTWWiJcL._SX342_.jpg" width="100%" class="rounded mx-auto d-block" alt="...">
+            <a href="#"><img src="https://images-na.ssl-images-amazon.com/images/I/81VnTWWiJcL._SX342_.jpg" width="100%" class="rounded mx-auto d-block" alt="..."></a>
             <a href="#"><i class="far fa-times-circle mt-2"></i></a>
           </div>
         </div>
         <hr>
         <div class="row product-cart-pop">
           <div class="col-md-8 hover-cart-text">
-            <p>کرم ضد آفتاب الارو سری Foundation Effect مدل Prote Prote Prote Prote</p>
+            <a href="#" class="text-dark"><p>کرم ضد آفتاب الارو سری Foundation Effect مدل Prote Prote Prote Prote</p></a>
             <span class="c-price text-danger pt-1 text-center">
               <span class="c-price__value js-price-value pt-1">
                 ۱۰۸,۹۰۰
@@ -221,7 +223,7 @@
             </span>
           </div>
           <div class="col-md-4 text-center">
-            <img src="https://images-na.ssl-images-amazon.com/images/I/81VnTWWiJcL._SX342_.jpg" width="100%" class="rounded mx-auto d-block" alt="...">
+            <a href="#"><img src="https://images-na.ssl-images-amazon.com/images/I/81VnTWWiJcL._SX342_.jpg" width="100%" class="rounded mx-auto d-block" alt="..."></a>
             <a href="#"><i class="far fa-times-circle mt-2"></i></a>
           </div>
         </div>
@@ -239,6 +241,34 @@
     <section>
       <div class="container-fluid">
         <div class="row">
+          <div class="col-md-6">
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+              <ol class="carousel-indicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+              </ol>
+              <div class="carousel-inner rounded">
+                <div class="carousel-item active">
+                  <img class="d-block w-100" src="https://picsum.photos/id/1008/5616/3744" alt="First slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="https://picsum.photos/id/1008/5616/3744" alt="Second slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="https://picsum.photos/id/1008/5616/3744" alt="Third slide">
+                </div>
+              </div>
+              <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
+            </div>
+          </div>
           <div class="col-md-3 text-center small-banner-top hide-mobile">
             <a href="#">
               <div class="rounded shadow-lg product-hover" id='first-banner'>
@@ -268,34 +298,7 @@
             </a>
           </div>
 
-          <div class="col-md-6">
-            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-              <ol class="carousel-indicators">
-                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-              </ol>
-              <div class="carousel-inner rounded">
-                <div class="carousel-item active">
-                  <img class="d-block w-100" src="https://picsum.photos/id/1008/5616/3744" alt="First slide">
-                </div>
-                <div class="carousel-item">
-                  <img class="d-block w-100" src="https://picsum.photos/id/1008/5616/3744" alt="Second slide">
-                </div>
-                <div class="carousel-item">
-                  <img class="d-block w-100" src="https://picsum.photos/id/1008/5616/3744" alt="Third slide">
-                </div>
-              </div>
-              <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-              </a>
-              <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-              </a>
-            </div>
-          </div>
+
         </div>
       </div>
     </section>
