some ui changes (TODO: user login modal)

--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!doctype html>
 <html lang="en">
-
 <head>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="theme-color" content="#e53935">
+   <meta name="title" content="پابیشا | نقد و بررسی ، انتخاب و خرید آنلاین کتاب درسی">
+   <meta name="description" content="فروشگاه کتاب کانون(قلم چی) پر تخفیف ترین سایت خرید آنلاین کتاب کمک آموزشی کنکور، دهم، نهم و هشتم تجربی و ریاضی و انسانی . دانلود رایگان یک فصل از هر کتاب">
+   <meta name="keywords" content="کانون بوک, خرید کتاب قلمچی,خرید کتاب کانون, خرید کتاب قلمچی, خرید کتاب کمک آموزشی قلمچی, خرید کتاب کمک درسی قلمچی, خرید کتاب, خرید کتاب قلمچی, خرید کتاب قلمچی آنلاین, خرید آنلاین کتاب قلمچی, خرید ایترنتی کتاب قلمچی, سایت خرید کتاب قلمچی">
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -65,7 +68,7 @@
       </button>
 
       <div class="collapse navbar-collapse text-small" id="navbarSupportedContent">
-        <ul class="navbar-nav ml-auto center-responsive mr-2">
+        <ul class="navbar-nav ml-auto center-responsive mr-2 small-text-responsive">
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               بازی و ابزار آموزشی
@@ -173,7 +176,7 @@
         </ul>
         <div class="ltr hide-responsive">
           <div class="search-box">
-            <input type="text" placeholder="دنبال چی می گردی؟" class="search-txt text-white">
+            <input type="text" placeholder="دنبال چی می گردی؟" class="search-txt">
             <a href="" class="search-btn">
               <i class="fas fa-search"></i>
             </a>
@@ -328,13 +331,13 @@
         <div class="col-md-12 countdown-bg rounded-top">
           <div class="container">
             <div class="row offer-timer">
-              <h6 class="pt-4 offer-timer-heading font-weight-bold" id="head">
+              <h6 class="pt-4 offer-timer-heading font-weight-bold text-white" id="head">
                 لورم ایپسوم متن ساختگی
                 <br><br>
                 تولید کننده لورم ایپسوم
 
               </h6>
-              <ul class="mr-auto text-center font-weight-bold">
+              <ul class="mr-auto text-center font-weight-bold  text-white">
                 <li class="li-timer"><span id="days"></span>روز</li>
                 <li class="li-timer"><span id="hours"></span>ساعت</li>
                 <li class="li-timer"><span id="minutes"></span>دقیقه</li>
@@ -632,9 +635,9 @@
         <div class="col-md-12 new-bg rounded-top">
           <div class="container">
             <div class="row">
-              <h6 class="pt-4 font-weight-bold"> جدیدترین کالا ها </h6>
+              <h6 class="pt-4 font-weight-bold text-white"> جدیدترین کالا ها </h6>
               <a class="mr-auto" href="#">
-                <h6 class="pt-4 font-weight-bold text-dark"> مشاهده همه <i class="fas fa-angle-left pt-1"></i></h6>
+                <h6 class="pt-4 font-weight-bold text-white pb-3"> مشاهده همه <i class="fas fa-angle-left pt-1"></i></h6>
               </a>
 
             </div>
@@ -891,9 +894,9 @@
         <div class="col-md-12 new-bg rounded-top">
           <div class="container">
             <div class="row">
-              <h6 class="pt-4 font-weight-bold"> جدیدترین کالا ها </h6>
+              <h6 class="pt-4 font-weight-bold text-white"> جدیدترین کالا ها </h6>
               <a class="mr-auto" href="#">
-                <h6 class="pt-4 font-weight-bold text-dark"> مشاهده همه <i class="fas fa-angle-left pt-1"></i></h6>
+                <h6 class="pt-4 font-weight-bold text-white pb-3"> مشاهده همه <i class="fas fa-angle-left pt-1"></i></h6>
               </a>
 
             </div>
@@ -1111,18 +1114,47 @@
     </section>
     <!-- special features -->
     <section>
-      <nav class="c-footer__feature-innerbox"><a data-snt-event="dkFooterClick" data-snt-params="{&quot;item&quot;:&quot;slogan-image&quot;,&quot;item_option&quot;:&quot;تحویل اکسپرس&quot;}" class="c-footer__badge" href="/faq/question/79/"
-          target="_blank">
-          <div class="c-footer__feature-item c-footer__feature-item--1">تحویل اکسپرس</div>
-        </a><a data-snt-event="dkFooterClick" data-snt-params="{&quot;item&quot;:&quot;slogan-image&quot;,&quot;item_option&quot;:&quot;پشتیبانی ۲۴ ساعته&quot;}" class="c-footer__badge" href="/page/contact-us/" target="_blank">
-          <div class="c-footer__feature-item c-footer__feature-item--3">پشتیبانی ۲۴ ساعته</div>
-        </a><a data-snt-event="dkFooterClick" data-snt-params="{&quot;item&quot;:&quot;slogan-image&quot;,&quot;item_option&quot;:&quot;پرداخت در محل&quot;}" class="c-footer__badge" href="/faq/question/81/" target="_blank">
-          <div class="c-footer__feature-item c-footer__feature-item--4">پرداخت در محل</div>
-        </a><a data-snt-event="dkFooterClick" data-snt-params="{&quot;item&quot;:&quot;slogan-image&quot;,&quot;item_option&quot;:&quot;۷ روز ضمانت بازگشت&quot;}" class="c-footer__badge" href="/faq/question/83/" target="_blank">
-          <div class="c-footer__feature-item c-footer__feature-item--5">۷ روز ضمانت بازگشت</div>
-        </a><a data-snt-event="dkFooterClick" data-snt-params="{&quot;item&quot;:&quot;slogan-image&quot;,&quot;item_option&quot;:&quot;ضمانت اصل‌بودن کالا&quot;}" class="c-footer__badge" href="/faq/question/82/" target="_blank">
-          <div class="c-footer__feature-item c-footer__feature-item--6">ضمانت اصل‌بودن کالا</div>
-        </a></nav>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="text-center d-inline-flex ml-auto mr-auto">
+            <div class="pr-2 pl-2 m-auto">
+              <img class="im-fluid" height="auto" width="50" src="https://www.digikala.com/static/files/8f570b58.svg" alt="">
+        <a href="#">
+           <h6 class="pt-3">تحویل اکسپرس</h6>
+         </a>
+            </div>
+            <div class="vl"></div>
+            <div class="pr-2 pl-2 m-auto">
+              <img class="im-fluid" height="auto" width="34" src="https://www.digikala.com/static/files/a9286d2f.svg" alt="">
+        <a href="#">
+           <h6 class="pt-3">پشتیبانی ۲۴ ساعته</h6>
+         </a>
+            </div>
+            <div class="vl"></div>
+            <div class="pr-2 pl-2 m-auto">
+              <img class="im-fluid" height="auto" width="34" src="https://www.digikala.com/static/files/22414818.svg" alt="">
+        <a href="#">
+           <h6 class="pt-3">پرداخت در محل</h6>
+         </a>
+            </div>
+            <div class="vl"></div>
+            <div class="pr-2 pl-2 m-auto">
+              <img class="im-fluid" height="auto" width="34" src="https://www.digikala.com/static/files/514926b1.svg" alt="">
+        <a href="#">
+           <h6 class="pt-3">۷ روز ضمانت بازگشت</h6>
+         </a>
+            </div>
+            <div class="vl"></div>
+            <div class="pr-2 pl-2 m-auto">
+              <img class="im-fluid" height="auto" width="31" src="https://www.digikala.com/static/files/fdb293e6.svg" alt="">
+        <a href="#">
+           <h6 class="pt-3">ضمانت اصل‌بودن کالا</h6>
+         </a>
+            </div>
+          </div>
+
+        </div>
+      </div>
     </section>
     <!-- brands carousel -->
     <section>
@@ -1130,9 +1162,9 @@
         <div class="col-md-12 new-bg rounded-top">
           <div class="container">
             <div class="row">
-              <h6 class="pt-4 font-weight-bold">برترین انتشارات‌ها </h6>
+              <h6 class="pt-4 font-weight-bold text-white">برترین انتشارات‌ها </h6>
               <a class="mr-auto" href="#">
-                <h6 class="pt-4 font-weight-bold text-dark"> مشاهده همه <i class="fas fa-angle-left pt-1"></i></h6>
+                <h6 class="pt-4 font-weight-bold text-white pb-3"> مشاهده همه <i class="fas fa-angle-left pt-1"></i></h6>
               </a>
 
             </div>
